--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,84 +1,36 @@
-#--- Configuração Correta (v9) ---
-source = /home/woulschneider/.config/hypr/env-vars.conf
-monitor=,preferred,auto,1
-exec-once = waybar
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ulauncher --hide-window
-# exec-once = swaybg -i $HOME/Pictures/wallpaper.png
+# --- Configuração v11 (Limpa e Funcional) ---
 
+# Define o monitor principal
+monitor=,preferred,auto,1
+
+# Define o layout ABNT (Essencial)
 input {
     kb_layout = br
-    follow_mouse = 1
-    touchpad { natural_scroll = no }
-    sensitivity = 0
 }
-general {
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    layout = dwindle
-    cursor_inactive_timeout = 5
-}
-decoration {
-    rounding = 5
-    blur {
-        enabled = true
-        size = 5
-        passes = 2
-        new_optimizations = true
-    }
-    drop_shadow = yes
-    shadow_range = 10
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
-animations {
-    enabled = yes
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-dwindle {
-    pseudotile = yes
-    preserve_split = yes
-}
-master {
-    new_is_master = true
-}
-gestures {
-    workspace_swipe = false
-}
-$mainMod = SUPER
-bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, Q, killactive
-bind = $mainMod, M, exit
-bind = $mainMod, SPACE, exec, ulauncher --toggle-window
-bind = $mainMod, E, exec, thunar
-bind = $mainMod, V, togglefloating
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bindle = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
-bindle = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%-
-bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindle = , XF86MonBrightnessUp, exec, brightnessctl set +5%
-bindle = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bind = , PRINT, exec, grim -g "$(slurp)" - | wl-copy
-bind = $mainMod, P, exec, grim -g "$(slurp)" - | wl-copy
+
+# --- Programas de Autostart ---
+# Inicia a barra de status
+exec-once = waybar
+# Inicia o Ulauncher em segundo plano
+exec-once = ulauncher --hide-window
+
+# --- Atalhos (Binds) ---
+# Atalho para o Terminal (Alacritty)
+# SUPER + ENTER
+bind = SUPER, RETURN, exec, alacritty
+
+# Atalho para o Ulauncher
+# SUPER + ESPAÇO
+bind = SUPER, SPACE, exec, ulauncher --toggle-window
+
+# Atalho para o Menu de Apps (Wofi, que também foi instalado)
+# SUPER + D
+bind = SUPER, D, exec, wofi --show drun
+
+# Atalho para sair
+# SUPER + M
+bind = SUPER, M, exit, 
+
+# Atalho para fechar apps
+# SUPER + Q
+bind = SUPER, Q, killactive, 
