Update Hyprland configuration to version 12

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,4 +1,7 @@
-# --- Configuração v11 (Limpa e Funcional) ---
+# --- Configuração v12 (Completa e Corrigida) ---
+
+# Carrega as variáveis da NVIDIA (A linha que faltava)
+source = /home/woulschneider/.config/hypr/env-vars.conf
 
 # Define o monitor principal
 monitor=,preferred,auto,1
@@ -13,24 +16,27 @@ input {
 exec-once = waybar
 # Inicia o Ulauncher em segundo plano
 exec-once = ulauncher --hide-window
+# Inicia o agente de autenticação (para senhas sudo em apps gráficos)
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # --- Atalhos (Binds) ---
-# Atalho para o Terminal (Alacritty)
-# SUPER + ENTER
-bind = SUPER, RETURN, exec, alacritty
+$mainMod = SUPER
 
-# Atalho para o Ulauncher
-# SUPER + ESPAÇO
-bind = SUPER, SPACE, exec, ulauncher --toggle-window
+# Terminal (Alacritty)
+bind = $mainMod, RETURN, exec, alacritty
 
-# Atalho para o Menu de Apps (Wofi, que também foi instalado)
-# SUPER + D
-bind = SUPER, D, exec, wofi --show drun
+# Launcher (Ulauncher)
+bind = $mainMod, SPACE, exec, ulauncher --toggle-window
 
-# Atalho para sair
-# SUPER + M
-bind = SUPER, M, exit, 
+# Menu de Apps (Wofi)
+bind = $mainMod, D, exec, wofi --show drun
 
-# Atalho para fechar apps
-# SUPER + Q
-bind = SUPER, Q, killactive, 
+# Fechar aplicação
+bind = $mainMod, Q, killactive, 
+
+# Sair do Hyprland (volta ao TTY)
+bind = $mainMod, M, exit, 
+
+# Gerenciador de Arquivos (Thunar)
+# (Vamos adicionar, já que o instalamos)
+bind = $mainMod, E, exec, thunar
